kegg download was changed, now protein search through entreez

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ SRR11362851.contigs.fa
 /tools/
 assembly_graph_big.gfa
 /picota/assembly/
+/picota/bacteria_xeno_proteins
+/bacteria_xeno_proteins
+/merged
