--- a/picota/config.yaml
+++ b/picota/config.yaml
@@ -1,3 +1,11 @@
+logging:
+  log_file: "picota/picota.log"
+  level: "INFO"
+
+
+
+
+
 delete_fastq_files: true
 sra_id_file: "picota/selected_sra.csv"
 
@@ -7,7 +15,7 @@ outdir : "/media/lin-bio/back2/picota_project_longTestIS26"
 path_of_fastq_dump: "parallel-fastq-dump"
 assembly_threads: 24
 assembly_k_mer_list: "79,99"
-assembly_quiet: false
+assembly_quiet: true
 assembly_keep_temp_files: true
 assembly_path_of_spades: "spades.py"
 assembly_path_of_fastp: "fastp"
@@ -33,3 +41,34 @@ k_mer_sim: 50
 threshold_sim: 50
 
 mapping_threads: 8
+
+
+
+
+block_patterns:
+  CT: ["cargo", "transposon"]
+  TC: ["transposon", "cargo"]
+  TCT: ["transposon", "cargo", "transposon"]
+  CTC: ["cargo", "transposon", "cargo"]
+  CTCT: ["cargo", "transposon", "cargo", "transposon"]
+  TCTC: ["transposon", "cargo", "transposon", "cargo"]
+  TCTCT: ["transposon", "cargo", "transposon", "cargo", "transposon"]
+  CTCTC: ["cargo", "transposon", "cargo", "transposon", "cargo"]
+  TCTCTC: ["transposon", "cargo", "transposon", "cargo", "transposon", "cargo"]
+  TCTCTCT: ["transposon", "cargo", "transposon", "cargo", "transposon", "cargo", "transposon"]
+
+block_tolerances:
+  tolerance: 1000
+  small_overlap: 300
+  boosted_tolerance: 1000
+  max_boost: 5000
+  mode_gap_tolerance: 200
+  min_large_fraction: 0.25
+  absolute_small_gap: 200
+
+block_plotting:
+  outdir: "figures"
+  prefix: "global"
+  hist_bins: 30
+  scatter_point_size: 30
+  scatter_alpha: 0.6
