global logger and modular config dataclass added

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ assembly_graph_big.gfa
 /picota/DBs/
 /picota/IS26_CompoundTransposons/
 /IS26_CompoundTransposons/
+/picota/picota.log
+picota.log
+log.txt
