--- a/picota/config.yaml
+++ b/picota/config.yaml
@@ -2,7 +2,7 @@
 # Logging
 # -------------------------
 logging:
-  log_file: "picota/picota.log"
+  log_file: "/media/lin-bio/back2/picota_project_BIOMIGTest/picota.log"
   level: "DEBUG"
   logger_name: "picota_analysis"
 
@@ -11,8 +11,8 @@ logging:
 # -------------------------
 paths:
   # Pipeline
-  outdir: "/media/lin-bio/back2/picota_project_longTestIS26"
-  sra_id_file: "picota/selected_sra.csv"
+  outdir: "/media/lin-bio/back2/picota_project_BIOMIGTest"
+  sra_id_file: "picota/sra_ids.tsv"
   fastq_dump: "parallel-fastq-dump"
 
   # Assembly
@@ -23,7 +23,8 @@ paths:
   path_of_spades: "spades.py"
   path_of_fastp: "fastp"
   skip_filtering: true
-  assembler_type: "megahit"
+  #assembler_type: "megahit"
+  assembler_type: "spades"
   path_of_megahit: "megahit"
 
   # Tools
